<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.limayeneha.decidewithfriends.MainActivity">

    <TextView
        android:text="@string/event_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:id="@+id/tv_event_time"
        android:layout_below="@+id/dp_event_date"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/et_event_name"
        android:hint="@string/event_name_hint"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/dp_event_date"
        android:layout_alignStart="@+id/dp_event_date" />

    <TextView
        android:text="@string/event_venue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_event_venue"
        android:layout_alignBaseline="@+id/et_event_venue"
        android:layout_alignBottom="@+id/et_event_venue"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/et_event_venue"
        android:hint="@string/event_venue_hint"
        android:layout_below="@+id/et_event_name"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="13dp"
        android:layout_alignLeft="@+id/et_event_name"
        android:layout_alignStart="@+id/et_event_name" />

    <TextView
        android:text="@string/event_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_event_date"
        android:layout_below="@+id/et_event_venue"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="18dp" />

    <DatePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:datePickerMode="spinner"
        android:calendarViewShown="false"
        android:id="@+id/dp_event_date"
        android:layout_alignTop="@+id/tv_event_date"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TimePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:timePickerMode="spinner"
        android:id="@+id/tp_event_time"
        android:layout_alignTop="@+id/tv_event_time"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/dp_event_date"
        android:layout_alignStart="@+id/dp_event_date" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_event_name"
        android:text="@string/event_name"
        android:layout_alignBaseline="@+id/et_event_name"
        android:layout_alignBottom="@+id/et_event_name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
